--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -507,9 +507,9 @@
     </div>
     <div class="col-12 order-4 col-lg-4">
       <div class="dope-wrapper">
-        <p>Save to cookie</p>
+        <p>This will enable session-based user account</p>
         <button class="btn-dope">
-          Do it!
+          Coming soon!
         </button>
       </div>
     </div>
