--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -11,7 +11,7 @@
           <div class="collapse fade login-collapse" id="splash-collapse">
             <h1>
               <strong>
-                Listen to thousands of free podcasts in {{ results.languages|length }} languages and {{ results.genres|length }} genres
+                Listen
               </strong>
             </h1>
             {% include "logo.min.html" %}
@@ -118,7 +118,7 @@
           <div class="collapse fade login-collapse" id="splash-collapse">
             <h1>
               <strong>
-                Listen to thousands of free podcasts in {{ results.languages|length }} languages and {{ results.genres|length }} genres
+                Listen
               </strong>
             </h1>
             {% include "logo.min.html" %} {% include "search-form.min.html" %}
@@ -224,7 +224,7 @@
           <div class="collapse fade login-collapse" id="splash-collapse">
             <h1>
               <strong>
-                Listen to thousands of free podcasts in {{ results.languages|length }} languages and {{ results.genres|length }} genres
+                Listen
               </strong>
             </h1>
             {% include "logo.min.html" %} {% include "search-form.min.html" %}
@@ -330,7 +330,7 @@
           <div class="collapse fade login-collapse show" id="splash-collapse">
             <h1>
               <strong>
-                Listen to thousands of free podcasts in {{ results.languages|length }} languages and {{ results.genres|length }} genres
+                Listen
               </strong>
             </h1>
             {% include "logo.min.html" %} {% include "search-form.min.html" %}
