--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -75,7 +75,11 @@
   </div>
   <!-- PLAYER -->
   <div class="container-fluid fixed-bottom" id="player">
-    {% include "player.min.html" %}
+    {% if episode %}
+      {% include "player.min.html" %}
+    {% elif cookie_banner %}
+      {% include "cookie_banner.min.html" %}
+    {% endif %}
   </div>
   <!-- FOOTER -->
   <footer class="color-1-trans" id="footer">
