--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -15,10 +15,10 @@
         {% endif %}
       </form>
     {% endif %}
-    <a class="btn-dope exp exp-icon showpod-button" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+    <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
       Episodes
     </a>
-    <a class="btn-dope exp exp-icon showpod-button" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+    <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
       Reviews
     </a>
   {% endif %}
