charts-result fixes

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -748,6 +748,7 @@ input[type=checkbox] {
   float: right;
 }
 .charts-rank {
+  color: rgb(46, 46, 46);
   float: left;
   margin-right: 5px;
   text-align: center;
