--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -4,11 +4,11 @@
 <div class="row">
   {% for podcast in results.podcasts %}
     <div class="col-12 charts-result">
-      <span class="charts-rank">
+      <a class="charts-rank showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         <strong>
           {{ forloop.counter }}
         </strong>
-      </span>
+      </a>
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}" />
@@ -54,7 +54,7 @@
       </ul>
       <div class="charts-buttons">
         <a class="btn-dope active showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-          Show more
+          Show episodes
         </a>
       </div>
     </div>
