--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -54,7 +54,7 @@
       </ul>
       <div class="charts-buttons">
         <a class="btn-dope active showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
-          Show episodes
+          Episodes
         </a>
       </div>
     </div>
