--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -1,4 +1,4 @@
-<div class="col-12 results-buttons">
+<div class="col-12 results-buttons color-3-trans">
   {% if results.view == "showpod" %}
     {% if user.is_authenticated %}
       <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
