--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -98,39 +98,34 @@
                     {% if results.view == "playlist" %}
                     {% endif %}
                     <div class="episode-buttons">
-                      {% if user.is_authenticated %}
-                        {% if results.view == "playlist" %}
-                          <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
-                            Show podcast
-                          </a>
+                      {% if results.view == "playlist" %}
+                        <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+                          {% csrf_token %}
+                          <input type="hidden" name="mode" value="remove" />
+                          <input type="hidden" name="pos" value="{{ episode.position }}" />
+                          <button class="btn-dope playlist-remove active" type="submit" title="Remove">
+                            <i class="fas fa-times icon"></i>
+                          </button>
+                        </form>
+                        {% if not forloop.first %}
                           <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                             {% csrf_token %}
-                            <input type="hidden" name="mode" value="remove" />
+                            <input type="hidden" name="mode" value="up" />
                             <input type="hidden" name="pos" value="{{ episode.position }}" />
-                            <button class="btn-dope playlist-remove active" type="submit" title="Remove">
-                              <i class="fas fa-times icon"></i>
+                            <button class="btn-dope playlist-move-up active" type="submit" title="Move Up">
+                              <i class="fas fa-arrow-up"></i>
                             </button>
                           </form>
-                          {% if not forloop.first %}
-                            <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                              {% csrf_token %}
-                              <input type="hidden" name="mode" value="up" />
-                              <input type="hidden" name="pos" value="{{ episode.position }}" />
-                              <button class="btn-dope playlist-move-up active" type="submit" title="Move Up">
-                                <i class="fas fa-arrow-up"></i>
-                              </button>
-                            </form>
-                          {% endif %}
-                          {% if not forloop.last %}
-                            <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                              {% csrf_token %}
-                              <input type="hidden" name="mode" value="down" />
-                              <input type="hidden" name="pos" value="{{ episode.position }}" />
-                              <button class="btn-dope playlist-move-down active" type="submit" title="Move Down">
-                                <i class="fas fa-arrow-down"></i>
-                              </button>
-                            </form>
-                          {% endif %}
+                        {% endif %}
+                        {% if not forloop.last %}
+                          <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+                            {% csrf_token %}
+                            <input type="hidden" name="mode" value="down" />
+                            <input type="hidden" name="pos" value="{{ episode.position }}" />
+                            <button class="btn-dope playlist-move-down active" type="submit" title="Move Down">
+                              <i class="fas fa-arrow-down"></i>
+                            </button>
+                          </form>
                         {% endif %}
                       {% endif %}
                       <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
@@ -142,9 +137,17 @@
                           <input type="hidden" name="signature" value="{{ episode.signature }}" />
                         {% endif %}
                         <button class="btn-dope playlist-play active" type="submit" title="Play">
-                          <i class="fas fa-play"></i>
+                          Play
                         </button>
                       </form>
+                      <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
+                        Download
+                      </a>
+                      {% if results.view == "playlist" %}
+                        <a class="btn-dope active showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}">
+                          Episodes
+                        </a>
+                      {% endif %}
                       {% if user.is_authenticated and results.view == "showpod" %}
                         <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                           {% csrf_token %}
@@ -155,9 +158,6 @@
                           </button>
                         </form>
                       {% endif %}
-                      <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
-                        <i class="fas fa-download"></i>
-                      </a>
                     </div>
                   </div>
                 </td>
