--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -1,4 +1,4 @@
-<div class="col-12 results-options">
+<div class="col-12 results-options color-3-trans">
   {% if results.alphabet %}
     <div class="collapse fade options-collapse" id="alphabet-collapse-{{ results.view }}">
       <div class="options-buttons">
