--- a/index/static/style.css
+++ b/index/static/style.css
@@ -133,7 +133,6 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   width: 34px;
   border-radius: 50%;
   border: 2px solid rgb(0, 191, 165);
-  color: unset;
   box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
   transition: all .25s ease-in-out;
 }
@@ -269,13 +268,13 @@ a.dash-wrapper {
 }
 #splash-play-result h1 {
   font-size: 1.5em;
-  margin-bottom: 3px;
-  height: 29px;
+  margin-bottom: 4px;
+  height: 30px;
 }
 #splash-play-result h2 {
   font-size: 1.25em;
-  margin-bottom: 3px;
-  height: 25px;
+  margin-bottom: 0;
+  height: 26px;
 }
 
 /* DOPEBAR */
