--- a/podcasts/templates/cookie_banner.html
+++ b/podcasts/templates/cookie_banner.html
@@ -1,4 +1,4 @@
-<div class="color-1-trans" id="cookie-banner">
+<div class="color-1" id="cookie-banner">
   <div class="col-12 dope-wrapper">
     <h1>This website uses cookies</h1>
     <button class="btn-dope cookie-banner-close">
