--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -86,7 +86,7 @@
                 </td>
               </tr>
               <tr>
-                <td colspan="6" class="episode-hidden color-3-trans">
+                <td colspan="6" class="episode-hidden color-3">
                   <div class="collapse fade more-collapse {% if not results.pages and forloop.last %}noborder{% endif %}" id="more-collapse{{ episode.position }}">
                     <p>
                       {% if episode.description %}
