--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,6 +1,6 @@
 <div class="container px-0">
   <div class="col-12 col-lg-4 ml-auto">
-    <div class="color-1-trans" id="player-wrapper">
+    <div class="color-1" id="player-wrapper">
       <div class="collapse fade" id="player-close-collapse">
         <p>
           Close player?
