--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -47,9 +47,7 @@
     <i class="fas fa-angle-up fa-lg" title="Up"></i>
   </button>
   <!-- DOPEBAR -->
-  <nav class="color-1-trans" id="dopebar">
-    {% include "dopebar.min.html" %}
-  </nav>
+  {% include "dopebar.min.html" %}
   <!-- MAIN CONTENT -->
   <div class="container" id="main-wrapper">
     <div class="row">
@@ -82,7 +80,7 @@
     {% endif %}
   </div>
   <!-- FOOTER -->
-  <footer class="color-1-trans" id="footer">
+  <footer class="color-1" id="footer">
     {% include "footer.min.html" %}
   </footer>
   <div id="loaders">
