--- a/index/static/style.css
+++ b/index/static/style.css
@@ -384,14 +384,11 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 }
 
 /* ERRORS */
-.errors {
-  min-height: 0;
-}
 .errors p {
   display: block;
   border-radius: .25rem;
   padding: 10px;
-  margin: 10px;
+  margin: 0;
   box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
 }
 
