removed padding from slick

--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -234,7 +234,7 @@
       </a>
     </div>
   {% endif %}
-  <div class="col-12 order-last color-3">
+  <div class="col-12 order-last color-3 px-0">
     {% include "slick.min.html" %}
   </div>
 </div>
