--- a/index/static/style.css
+++ b/index/static/style.css
@@ -2,6 +2,7 @@ body {
   font-size: 14px;
   font-family: "Exo", sans-serif;
   letter-spacing: .025rem;
+  word-wrap: break-word;
   transition: all .25s ease;
 }
 a {
@@ -13,8 +14,7 @@ a:hover {
   color: inherit;
   text-decoration: none;
 }
-h3 {
-  text-align: center;
+p {
   margin: 10px 0;
 }
 
@@ -24,7 +24,7 @@ h3 {
 
 /* THEMES */
 .light {
-  background: #fff;
+  background: rgb(255, 250, 240);
   color: rgb(46, 46, 46);
   transition: all .25s ease;
 }
@@ -37,8 +37,6 @@ h3 {
   color: rgb(46, 46, 46);
   transition: all .25s ease;
   background: repeating-linear-gradient( 135deg, rgba(213, 0, 0, .2), rgba(213, 0, 0, .2) 10px, rgba(0, 0, 0, .2) 10px, rgba(0, 0, 0, .2) 20px);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 /* COOKIE BANNER */
@@ -81,7 +79,7 @@ h3 {
 .no-touch .dope-toggle:hover,
 .dope-toggle:focus,
 .exp[aria-expanded="true"],
-.no-touch .charts-result:hover .charts-rank,
+.no-touch .expandable:hover .charts-rank,
 .no-touch .dash-wrapper:hover {
   color: #fff;
   outline: none;
@@ -158,15 +156,6 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 .dope-form-group label {
   margin-bottom: 0;
 }
-.dope-buttons {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-.dope-buttons li {
-  display: inline-block;
-  margin: 5px 2.5px;
-}
 .dope-wrapper{
   margin: auto;
   padding: 20px 10px;
@@ -230,7 +219,7 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 /* MAIN */
 #main-wrapper {
   padding-top: 44px;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
   min-height: 100vh;
 }
 #left,
@@ -239,35 +228,29 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   padding: 0 20px;
 }
 #splash {
+  padding: 0;
   min-height: 270px;
   overflow: hidden;
 }
 #splash .slick-list {
   overflow: visible;
 }
-#splash-play-result {
+.slick-listen {
   max-width: 500px;
   margin: auto;
-  padding: 10px 0;
 }
-#splash-play-result h1,
-#splash-play-result h2 {
+#splash .dope-result h1,
+#splash .dope-result h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-#splash-play-result img {
-  float: right;
-  margin-left: 5px;
-  border-radius: .25rem;
-  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
-}
-#splash-play-result h1 {
+#splash .dope-result h1 {
   font-size: 1.5em;
   margin-bottom: 4px;
   height: 30px;
 }
-#splash-play-result h2 {
+#splash .dope-result h2 {
   font-size: 1.25em;
   margin-bottom: 0;
   height: 26px;
@@ -506,8 +489,7 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 
 #dopebar-l,
 #dopebar-r,
-.list-result,
-.results-header {
+.list-result {
   padding: 0 10px;
 }
 #dopebar-c {
@@ -548,9 +530,6 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 }
 
 /* EPISODES */
-.episodes-content {
-  padding: 0;
-}
 .episode-hidden {
   padding: 0 !important;
 }
@@ -558,12 +537,11 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   border-bottom: 2px solid rgb(0, 191, 165);
 }
 .episode-hidden p {
-  margin: 10px 10px 0;
-  word-wrap: break-word;
+  margin: 0;
 }
 .episodes-table {
   table-layout: fixed;
-  margin: 0;
+  margin: 10px 0 0;
 }
 .episodes-table th,
 .episodes-table td {
@@ -584,7 +562,6 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   width: 45px;
 }
 .episodes-table .title {
-  word-wrap: break-word;
 }
 .episodes-table .released {
   width: 145px;
@@ -614,102 +591,87 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 }
 .results-bar {
   background: rgb(0, 191, 165);
-  padding: 8px 0 10px;
+  border-bottom: 2px solid rgb(0, 191, 165);
 }
-.results-header h1 {
+.results-bar h1 {
   text-align: center;
   font-size: 1.3em;
-  margin: 5px 0;
+  margin: 15px 0;
 }
-.results-buttons,
-.options-buttons,
-.episode-buttons {
-  justify-content: flex-end;
+.dope-result {
+  outline: none;
+  padding: 10px 10px 0;
 }
-.results-buttons,
-.pages-buttons,
-.options-buttons,
-.episode-buttons {
-  padding: 10px 10px 5px 5px;
+.dope-result img {
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
+}
+.dope-result p {
+  margin: 10px 0 0;
+}
+.dope-buttons,
+.dope-buttons-c,
+.dope-buttons-l,
+.dope-buttons-r {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-.results-buttons > *,
-.pages-buttons > *,
-.options-buttons > *,
-.episode-buttons > * {
+.dope-buttons-c,
+.dope-buttons-l,
+.dope-buttons-r {
+  padding: 10px 10px 5px 5px;
+}
+.dope-buttons-r {
+  justify-content: flex-end;
+}
+.dope-buttons-c {
+  justify-content: center;
+}
+.results-bar .dope-buttons-l:first-of-type {
+  float: left;
+}
+.results-bar .dope-buttons-l:last-of-type {
+  float: right;
+}
+.dope-buttons > * {
+  margin-right: 5px;
+}
+.dope-buttons-l > *,
+.dope-buttons-r > * {
   margin-left: 5px;
   margin-bottom: 5px;
 }
-.results-options {
-  padding: 0;
-  min-height: 0;
-}
-.options-buttons {
-  border-top: 2px solid rgb(0, 191, 165);
-}
-#center-stage .options-buttons {
-  border-bottom: 2px solid rgb(0, 191, 165);
+.dope-buttons-c > * {
+  margin: 0 2.5px 5px;
 }
 .nix-button {
   margin-right: auto;
 }
 .results-back {
   margin-right: 42px;
-  float: left;
-}
-.extra-options,
-.player-buttons {
-  float: right;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.extra-options > * {
-  margin-left: 5px;
-  box-shadow: none;
 }
 .results-collapse.show, .view-collapse.show {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+}
+#center-stage .results-options .dope-buttons-r {
+  border-bottom: 2px solid rgb(0, 191, 165);
+}
+.results-options .dope-buttons-r {
+  border-top: 2px solid rgb(0, 191, 165);
 }
 
 /* CHARTS */
-.charts-result,
-.last-played-result {
+#charts .dope-result,
+#last-played .dope-result {
   border-top: 2px solid rgb(0, 191, 165);
-  outline: none;
-  overflow: hidden;
-  padding: 10px;
 }
-.no-touch .charts-result:hover,
-.no-touch .last-played-result:hover,
-.last-played-result.expanded {
-  background: rgba(0, 191, 165, .2);
-}
-.charts-buttons,
-.splash-play-buttons {
-  padding-top: 5px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.charts-buttons > *,
-.splash-play-buttons > * {
-  margin-right: 5px;
-  margin-top: 5px;
-}
-.charts-result img {
-  margin-left: 5px;
+#splash .dope-result img,
+#charts .dope-result img {
+  margin-left: 10px;
   float: right;
-  border-radius: .25rem;
-  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
 }
 .dope-list {
   margin-bottom: 0;
@@ -723,9 +685,7 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   border-bottom: 2px solid rgba(0, 191, 165, 0);
 }
 .expanded .dope-list li,
-.no-touch .charts-result:hover .dope-list li,
-.no-touch .last-played-result:hover .dope-list li,
-.no-touch #splash-play-result:hover .dope-list li {
+.no-touch .expandable:hover .dope-list li {
   border-bottom: 2px solid rgba(0, 191, 165, .2);
 }
 .dope-list li span:last-child {
@@ -743,43 +703,29 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   border-radius: 50%;
   border: 2px solid rgb(0, 191, 165);
 }
-.charts-result h1,
-.charts-result h2 {
+#charts .dope-result h1,
+#charts .dope-result h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.charts-result h1 {
+#charts .dope-result h1 {
   font-size: 16px;
   height: 20px;
   margin-bottom: 4px;
 }
-.charts-result h2 {
+#charts .dope-result h2 {
   margin-bottom: 0;
   font-size: 14px;
   height: 16px;
 }
 
 /* LAST PLAYED */
-.last-played-buttons {
-  padding-top: 5px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-}
-.last-played-buttons > * {
-  margin-left: 5px;
-  margin-top: 5px;
-}
-.last-played-result img {
-  border-radius: .25rem;
+#last-played .dope-result img {
   float: left;
-  margin-right: 5px;
-  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
+  margin-right: 10px;
 }
-.last-played-result .result-length {
+#last-played .dope-result .result-length {
   position: absolute;
   font-size: 1em;
   font-weight: 400;
@@ -789,51 +735,44 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   padding: 0 4px;
   background: rgba(0, 0, 0, .5);
 }
-.last-played-result h1,
-.last-played-result h2 {
+#last-played .dope-result h1,
+#last-played .dope-result h2 {
   margin-bottom: 4px;
   overflow: hidden;
 }
-.last-played-result h1 {
+#last-played .dope-result h1 {
   font-size: 16px;
   height: 20px;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-.last-played-result h2 {
+#last-played .dope-result h2 {
   height: 32px;
   font-size: 14px;
-}
-.last-played-result p,
-#splash-play-result p {
-  word-wrap: break-word;
-  margin: 10px 0 0;
 }
 
 /* SEARCH RESULTS */
 .grid-results {
   padding: 10px 0 0 10px;
 }
-.grid-result a {
+.grid-results a {
+  display: block;
   color: unset;
   font-weight: unset;
 }
-.grid-result {
+.grid-results .dope-result {
   padding: 0 10px 10px 0;
 }
-.grid-result img {
-  border-radius: .25rem;
+.grid-results .dope-result img {
   margin-bottom: 10px;
-  box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
 }
-.no-touch .grid-result img:hover {
+.no-touch .grid-results .dope-result img:hover {
   -webkit-transform: scale(1.02);
   -ms-transform: scale(1.02);
   transform: scale(1.02);
 }
-.grid-result h1,
-.grid-result h2 {
-  word-wrap: break-word;
+.grid-results .dope-result h1,
+.grid-results .dope-result h2 {
   font-size: 14px;
   margin-bottom: 5px;
   overflow: hidden;
@@ -841,23 +780,9 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
 }
 
 /* SUBSCRIPTIONS */
-.grid-result p {
-  font-size: 12px;
-  margin-bottom: 10px;
-}
-.grid-result.selected .select-subscription {
+.selectable.selected .select {
   background: rgb(0, 191, 165);
   color: #fff;
-}
-.sub-buttons {
-  justify-content: flex-end;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-.sub-buttons > * {
-  margin-left: 5px;
 }
 .playlist-form,
 .subscriptions-form {
@@ -942,10 +867,6 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   display: inline-block;
   color: #fff;
   margin: 5px 10px 15px 0;
-}
-.player-buttons > * {
-  margin-bottom: 5px;
-  margin-left: 5px;
 }
 .player-episode {
   font-size: 14px;
@@ -1186,10 +1107,4 @@ html:not(.no-touch) .results-bar .exp[aria-expanded="true"]:not(:focus) {
   .episodes-table .size {
     width: 60px;
   }
-}
-/* tablets/desktops and up ----------- */
-@media (min-width: 992px) and (max-width: 1199px) {
-}
-/* large desktops and up ----------- */
-@media screen and (min-width: 1200px) {
 }
