--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -1,109 +1,83 @@
-<ul class="dope-buttons logo">
-  <li>
-    <a class="btn-dope index-link active" href="/">d</a>
-  </li>
-  <li>
-    <a class="btn-dope index-link active" href="/">o</a>
-  </li>
-  <li>
-    <a class="btn-dope index-link active" href="/">p</a>
-  </li>
-  <li>
-    <a class="btn-dope index-link active" href="/">e</a>
-  </li>
-  <li>
-    <a class="btn-dope index-link active" href="/">p</a>
-  </li>
-  <li>
-    <a class="btn-dope index-link active" href="/">o</a>
-  </li>
-  <li>
-    <a class="btn-dope index-link active" href="/">d</a>
-  </li>
-</ul>
+<div class="dope-buttons-c logo">
+  <a class="btn-dope index-link active" href="/">d</a>
+  <a class="btn-dope index-link active" href="/">o</a>
+  <a class="btn-dope index-link active" href="/">p</a>
+  <a class="btn-dope index-link active" href="/">e</a>
+  <a class="btn-dope index-link active" href="/">p</a>
+  <a class="btn-dope index-link active" href="/">o</a>
+  <a class="btn-dope index-link active" href="/">d</a>
+</div>
 <div class="slick-listen">
   <div class="slick-slide">
-    <ul class="dope-buttons logo d-none">
-      <li>
-        <a class="btn-dope index-link active" href="/">d</a>
-      </li>
-      <li>
-        <a class="btn-dope index-link active" href="/">o</a>
-      </li>
-      <li>
-        <a class="btn-dope index-link active" href="/">p</a>
-      </li>
-      <li>
-        <a class="btn-dope index-link active" href="/">e</a>
-      </li>
-      <li>
-        <a class="btn-dope index-link active" href="/">p</a>
-      </li>
-      <li>
-        <a class="btn-dope index-link active" href="/">o</a>
-      </li>
-      <li>
-        <a class="btn-dope index-link active" href="/">d</a>
-      </li>
+    <ul class="dope-buttons-c logo d-none">
+      <a class="btn-dope index-link active" href="/">d</a>
+      <a class="btn-dope index-link active" href="/">o</a>
+      <a class="btn-dope index-link active" href="/">p</a>
+      <a class="btn-dope index-link active" href="/">e</a>
+      <a class="btn-dope index-link active" href="/">p</a>
+      <a class="btn-dope index-link active" href="/">o</a>
+      <a class="btn-dope index-link active" href="/">d</a>
     </ul>
   </div>
   {% for episode in results.episodes %}
-    <div class="slick-slide">
-      <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
-        title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
-        <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
-      </a>      
-      <h1>
-        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}"
-          title="{{ episode.podcast.title }}">
-          <strong>{{ episode.podcast.title }}</strong>
-        </a>
-      </h1>
-      <h2>
-        <strong>{{ episode.title }}</strong>
-      </h2>
-      <ul class="dope-list">
-        <li>
-          <span>Released</span>
-          {% if episode.pubDate %}
-            <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
-          {% else %}
-            <span>N/A</span>
-          {% endif %}
-        </li>
-        <li>
-          <span>Played</span>
-          <span>{{ episode.played_ago }}</span>
-        </li>
-      </ul>
-      <div class="collapse fade splash-play-collapse" id="splash-play-collapse{{ forloop.counter }}">
+    <div class="slick-slide expandable">
+      <div class="dope-result">
+        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
+          title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
+          <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
+        </a>      
+        <h1>
+          <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}"
+            title="{{ episode.podcast.title }}">
+            <strong>{{ episode.podcast.title }}</strong>
+          </a>
+        </h1>
+        <h2>
+          <strong>{{ episode.title }}</strong>
+        </h2>
         <ul class="dope-list">
           <li>
-            <span>Length</span>
-            <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
+            <span>Released</span>
+            {% if episode.pubDate %}
+              <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
+            {% else %}
+              <span>N/A</span>
+            {% endif %}
           </li>
           <li>
-            <span>Size</span>
-            <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
-          </li>
-          <li>
-            <span>Genre</span>
-            <span>{{ episode.podcast.get_primary_genre }}</span>
-          </li>
-          <li>
-            <span>Language</span>
-            <span>{{ episode.podcast.language }}</span>
-          </li>
-          <li>
-            <span>Subscribers</span>
-            <span>{{ episode.podcast.get_n_subscribers }}</span>
+            <span>Played</span>
+            <span>{{ episode.played_ago }}</span>
           </li>
         </ul>
-        <p>
-          {% if episode.description %} {{ episode.description }} {% else %} No description {% endif %}
-        </p>
+        <div class="collapse fade splash-play-collapse" id="splash-play-collapse{{ forloop.counter }}">
+          <ul class="dope-list">
+            <li>
+              <span>Length</span>
+              <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
+            </li>
+            <li>
+              <span>Size</span>
+              <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
+            </li>
+            <li>
+              <span>Genre</span>
+              <span>{{ episode.podcast.get_primary_genre }}</span>
+            </li>
+            <li>
+              <span>Language</span>
+              <span>{{ episode.podcast.language }}</span>
+            </li>
+            <li>
+              <span>Subscribers</span>
+              <span>{{ episode.podcast.get_n_subscribers }}</span>
+            </li>
+          </ul>
+          <p>
+            {% if episode.description %} {{ episode.description }} {% else %} No description {% endif %}
+          </p>
+        </div>
       </div>
-      <div class="splash-play-buttons">
+      <div class="dope-buttons-l">
         <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
           {% csrf_token %}
           <input type="hidden" name="mode" value="play" />
