--- a/index/templates/privacy.html
+++ b/index/templates/privacy.html
@@ -1,6 +1,3 @@
-<h3>
-  Privacy Policy
-</h3>
 <p>
   This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our website.
 </p>
@@ -198,5 +195,5 @@
   Contacting Us
 </strong>
 <p>
-  If there are any questions regarding this privacy policy, you may contact via the <a class="contact-link" href="{% url 'contact' %}">contact form</a>.
+  If there are any questions regarding this privacy policy, you may contact us via the <a class="contact-link" href="{% url 'contact' %}">contact form</a>.
 </p>
