--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,7 +1,38 @@
 {% if not results.episodes and results.view == "playlist" %}
 {% else %}
   <div class="row">
-    {% include "results_buttons.min.html" %}
+    <div class="col-12 color-3 px-0">
+      <div class="dope-buttons-r">
+        {% if results.view == "showpod" %}
+          {% if user.is_authenticated %}
+            <form class="subscriptions-form" action="{% url 'subscriptions' %}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="podid" value="{{ results.podcast.podid }}">
+              {% if results.podcast.is_subscribed %}
+                <button type="submit" class="btn-dope sub-button">
+                  Unsubscribe
+                </button>
+              {% else %}
+                <button type="submit" class="btn-dope active sub-button">
+                  Subscribe
+                </button>
+              {% endif %}
+            </form>
+          {% endif %}
+          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
+            Episodes
+          </a>
+          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
+            Reviews
+          </a>
+        {% endif %}
+        {% if results.view == "playlist" %}
+          <a class="btn-dope options-button" href="{% url 'playlist' %}">
+            <i class="fas fa-sync" title="Update"></i>
+          </a>
+        {% endif %}
+      </div>
+    </div>
   </div>
 {% endif %}
 {% if not results.view == "playlist" %}
@@ -26,10 +57,8 @@
       </p>
     </div>
   {% else %}
-    {% if results.pages %}
+    <div class="col-12 px-0">
       {% include "pagination.min.html" %}
-    {% endif %}
-    <div class="col-12 episodes-content">
       {% if results.episodes %}
         <table class="table episodes-table">
           <thead>
@@ -88,16 +117,18 @@
               <tr>
                 <td colspan="6" class="episode-hidden color-3">
                   <div class="collapse fade more-collapse {% if not results.pages and forloop.last %}noborder{% endif %}" id="more-collapse{{ episode.position }}">
-                    <p>
-                      {% if episode.description %}
-                        {{ episode.description }}
-                      {% else %}
-                        No description
-                      {% endif %}
-                    </p>
+                    <div class="dope-result">
+                      <p>
+                        {% if episode.description %}
+                          {{ episode.description }}
+                        {% else %}
+                          No description
+                        {% endif %}
+                      </p>
+                    </div>
                     {% if results.view == "playlist" %}
                     {% endif %}
-                    <div class="episode-buttons">
+                    <div class="dope-buttons-r">
                       {% if results.view == "playlist" %}
                         <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
                           {% csrf_token %}
@@ -166,9 +197,7 @@
           </tbody>
         </table>
       {% endif %}
-    </div>
-    {% if results.pages %}
       {% include "pagination.min.html" %}
-    {% endif %}
+    </div>
   {% endif %}
 </div>
