--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -1,73 +1,85 @@
 <div class="row">
-  {% include "results_buttons.min.html" %}
+  <div class="col-12 color-3 px-0">
+    <div class="dope-buttons-r">
+      {% if results.view == "last_played" %}
+        <a class="btn-dope options-button" href="{% url 'last_played' %}">
+          <span>Updated </span>
+          <span class="date" data-utc="{% now 'U' %}">{% now "d-m-Y H:i" %}</span>
+          <i class="fas fa-sync" title="Update"></i>
+        </a>
+      {% endif %}
+    </div>
+  </div>
 </div>
 <div class="row">
   {% for episode in results.episodes %}
-    <div class="col-12 last-played-result">
-      <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
-        {% if episode.length %}
-          <span class="result-length">{{ episode.length }}</span>
-        {% endif %}
-        <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
-      </a>
-      <button class="dope-toggle exp exp-icon" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
-      aria-expanded="false">
-      </button>
-      <h1>
+    <div class="col-12 expandable px-0">
+      <div class="dope-result">
         <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
-          <strong>{{ episode.podcast.title }}</strong>
-        </a>
-      </h1>
-      <h2>
-        <strong>{{ episode.title }}</strong>
-      </h2>
-      <ul class="dope-list">
-        <li>
-          <span>Released</span>
-          {% if episode.pubDate %}
-            <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
-          {% else %}
-            <span>N/A</span>
+          {% if episode.length %}
+            <span class="result-length">{{ episode.length }}</span>
           {% endif %}
-        </li>
-        <li>
-          <span>Played</span>
-          <span>{{ episode.played_ago }}</span>
-        </li>
-      </ul>
-      <div class="collapse fade last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
+          <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
+          onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
+        </a>
+        <button class="dope-toggle exp exp-icon" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
+        aria-expanded="false">
+        </button>
+        <h1>
+          <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
+            <strong>{{ episode.podcast.title }}</strong>
+          </a>
+        </h1>
+        <h2>
+          <strong>{{ episode.title }}</strong>
+        </h2>
         <ul class="dope-list">
           <li>
-            <span>Length</span>
-            <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
+            <span>Released</span>
+            {% if episode.pubDate %}
+              <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
+            {% else %}
+              <span>N/A</span>
+            {% endif %}
           </li>
           <li>
-            <span>Size</span>
-            <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
-          </li>
-          <li>
-            <span>Genre</span>
-            <span>{{ episode.podcast.get_primary_genre }}</span>
-          </li>
-          <li>
-            <span>Language</span>
-            <span>{{ episode.podcast.language }}</span>
-          </li>
-          <li>
-            <span>Subscribers</span>
-            <span>{{ episode.podcast.get_n_subscribers }}</span>
+            <span>Played</span>
+            <span>{{ episode.played_ago }}</span>
           </li>
         </ul>
-        <p>
-          {% if episode.description %}
-            {{ episode.description }}
-          {% else %}
-            No description
-          {% endif %}
-        </p>
+        <div class="collapse fade last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
+          <ul class="dope-list">
+            <li>
+              <span>Length</span>
+              <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
+            </li>
+            <li>
+              <span>Size</span>
+              <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
+            </li>
+            <li>
+              <span>Genre</span>
+              <span>{{ episode.podcast.get_primary_genre }}</span>
+            </li>
+            <li>
+              <span>Language</span>
+              <span>{{ episode.podcast.language }}</span>
+            </li>
+            <li>
+              <span>Subscribers</span>
+              <span>{{ episode.podcast.get_n_subscribers }}</span>
+            </li>
+          </ul>
+          <p>
+            {% if episode.description %}
+              {{ episode.description }}
+            {% else %}
+              No description
+            {% endif %}
+          </p>
+        </div>
       </div>
-      <div class="last-played-buttons">
+      <div class="dope-buttons-r">
         <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
           {% csrf_token %}
           <input type="hidden" name="mode" value="play" />
