--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -1,86 +1,164 @@
 <div class="row">
-  {% include "results_buttons.min.html" %}
-  {% if results.pages %}
+  <div class="col-12 color-3 px-0">
+    <div class="dope-buttons-r">
+      {% if results.order == "rank" %}
+        <a class="btn-dope options-button active order-button" href="{{ results.order_url }}">
+          <span>123</span>
+          <span class="d-none">ABC</span>
+        </a>
+      {% elif results.order == "name" %}
+        <a class="btn-dope options-button active order-button" href="{{ results.order_url }}">
+          <span class="d-none">123</span>
+          <span>ABC</span>
+        </a>
+      {% endif %}
+      {% if results.view == "grid" %}
+        <a class="btn-dope view-button active" href="{{ results.view_url }}">
+          <span data-view="list">
+            <i class="fas fa-th" title="Toggle View"></i>
+          </span>
+          <span class="d-none" data-view="grid">
+            <i class="fas fa-bars" title="Toggle View"></i>
+          </span>
+        </a>
+      {% elif results.view == "list" %}
+        <a class="btn-dope view-button active" href="{{ results.view_url }}">
+          <span class="d-none" data-view="list">
+            <i class="fas fa-th" title="Toggle View"></i>
+          </span>
+          <span data-view="grid">
+            <i class="fas fa-bars" title="Toggle View"></i>
+          </span>
+        </a>
+      {% endif %}
+      {% if results.alphabet %}
+        {% if results.alphabet_nix_url %}
+          <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false"
+            aria-controls="alphabet-collapse">
+            {{ results.selected_q|capfirst }}
+          </a>
+        {% else %}
+          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false" aria-controls="alphabet-collapse">
+            A-Z
+          </a>
+        {% endif %}
+      {% endif %} 
+      {% if results.genres %}
+        {% if results.selected_genre %}
+          <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false"
+            aria-controls="genre-collapse">
+            {{ results.selected_genre }}
+          </a>
+        {% else %}
+          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#genre-collapse-{{ results.view }}" aria-expanded="false" aria-controls="genre-collapse">
+            All Genres
+          </a>
+        {% endif %}
+      {% endif %}
+      {% if results.languages %}
+        {% if results.selected_language %}
+          <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false"
+            aria-controls="language-collapse">
+            {{ results.selected_language }}
+          </a>
+        {% else %}
+          <a class="btn-dope exp exp-icon" data-toggle="collapse" href="#language-collapse-{{ results.view }}" aria-expanded="false" aria-controls="language-collapse">
+            All Languages
+          </a>
+        {% endif %}
+      {% endif %}
+    </div>
+    {% include "results-options.min.html" %}
+  </div>
+  <div class="col-12 px-0">
     {% include "pagination.min.html" %}
-  {% endif %}
+  </div>
 </div>
 {% if results.podcasts1 %}
   <div class="row collapse fade view-collapse grid-results {% if results.view == 'grid' %}show{% endif %}">
     {% for podcast in results.podcasts1 %}
-    <div class="col-lg-2 col-md-3 col-4 grid-result">
-      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.object.title }}" />
-        <h1>
-          <strong>
-            {{ podcast.object.title }}
-          </strong>
-        </h1>
-        <h2>
-          by
-          <strong>
-            {{ podcast.object.artist }}
-          </strong>
-        </h2>
-      </a>
-    </div>
+      <div class="col-lg-2 col-md-3 col-4 px-0">
+        <a class="dope-result showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+          <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+            alt="{{ podcast.object.title }}" />
+          <h1>
+            <strong>
+              {{ podcast.object.title }}
+            </strong>
+          </h1>
+          <h2>
+            <span>
+              by
+            </span>
+            <strong>
+              {{ podcast.object.artist }}
+            </strong>
+          </h2>
+        </a>
+      </div>
     {% endfor %}
     {% for podcast in results.podcasts2 %}
-    <div class="col-lg-2 col-md-3 col-4 grid-result">
-      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.object.title }}" />
-        <h1>
-          <strong>
-            {{ podcast.object.title }}
-          </strong>
-        </h1>
-        <h2>
-          by
-          <strong>
-            {{ podcast.object.artist }}
-          </strong>
-        </h2>
-      </a>
-    </div>
+      <div class="col-lg-2 col-md-3 col-4 px-0">
+        <a class="dope-result showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+          <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+            alt="{{ podcast.object.title }}" />
+          <h1>
+            <strong>
+              {{ podcast.object.title }}
+            </strong>
+          </h1>
+          <h2>
+            <span>
+              by
+            </span>
+            <strong>
+              {{ podcast.object.artist }}
+            </strong>
+          </h2>
+        </a>
+      </div>
     {% endfor %}
     {% for podcast in results.podcasts3 %}
-    <div class="col-lg-2 col-md-3 col-4 grid-result">
-      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.object.title }}" />
-        <h1>
-          <strong>
-            {{ podcast.object.title }}
-          </strong>
-        </h1>
-        <h2>
-          by
-          <strong>
-            {{ podcast.object.artist }}
-          </strong>
-        </h2>
-      </a>
-    </div>
+      <div class="col-lg-2 col-md-3 col-4 px-0">
+        <a class="dope-result showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+          <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+            alt="{{ podcast.object.title }}" />
+          <h1>
+            <strong>
+              {{ podcast.object.title }}
+            </strong>
+          </h1>
+          <h2>
+            <span>
+              by
+            </span>
+            <strong>
+              {{ podcast.object.artist }}
+            </strong>
+          </h2>
+        </a>
+      </div>
     {% endfor %}
     {% for podcast in results.podcasts4 %}
-    <div class="col-lg-2 col-md-3 col-4 grid-result">
-      <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-        <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-          alt="{{ podcast.object.title }}" />
-        <h1>
-          <strong>
-            {{ podcast.object.title }}
-          </strong>
-        </h1>
-        <h2>
-          by
-          <strong>
-            {{ podcast.object.artist }}
-          </strong>
-        </h2>
-      </a>
-    </div>
+      <div class="col-lg-2 col-md-3 col-4 px-0">
+        <a class="dope-result showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
+          <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+            alt="{{ podcast.object.title }}" />
+          <h1>
+            <strong>
+              {{ podcast.object.title }}
+            </strong>
+          </h1>
+          <h2>
+            <span>
+              by
+            </span>
+            <strong>
+              {{ podcast.object.artist }}
+            </strong>
+          </h2>
+        </a>
+      </div>
     {% endfor %}
   </div>
   <div class="row collapse fade view-collapse list-results {% if results.view == 'list' %}show{% endif %}">
@@ -143,6 +221,8 @@
 {% endif %}
 {% if results.pages %}
 <div class="row">
-  {% include "pagination.min.html" %}
+  <div class="col-12 px-0">
+    {% include "pagination.min.html" %}
+  </div>
 </div>
 {% endif %}
