--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -16,7 +16,7 @@
         <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
       </a>
-      <div class="player-buttons">
+      <div class="dope-buttons">
         <button class="btn-dope exp exp-icon player-minimize" aria-expanded="true">
         </button>
         <button class="btn-dope exp" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
